--- a/sample/shop/docker/src/test/docker/docker-compose.yml
+++ b/sample/shop/docker/src/test/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   idm:
     container_name: idm
-    image: jboss/keycloak:16.1.0
+    image: quay.io/keycloak/keycloak:18.0.2-legacy
     ports:
       - 8081:8080
     volumes:
