--- a/step0110/docker/src/test/docker/docker-compose.yml
+++ b/step0110/docker/src/test/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - POSTGRES_DB=person
   idm:
     container_name: idm
-    image: jboss/keycloak:16.1.0
+    image: quay.io/keycloak/keycloak:18.0.2-legacy
     ports:
       - 8081:8080
     volumes:
