--- a/sample/kubernetes/docker/microk8s/docker-compose.yml
+++ b/sample/kubernetes/docker/microk8s/docker-compose.yml
@@ -1,16 +1,16 @@
 services:
   shop:
     container_name: shop
-    image: shop:latest
+    image: shop:local
     ports:
       - 192.168.64.5:8080:8080
   person:
     container_name: person
-    image: person:latest
+    image: person:local
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5434/person
   auftrag:
     container_name: auftrag
-    image: auftrag:latest
+    image: auftrag:local
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5433/auftrag
