--- a/sample/kubernetes/docker/docker-compose.yml
+++ b/sample/kubernetes/docker/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     container_name: idm
     image: quay.io/keycloak/keycloak:18.0.2-legacy
     ports:
-      - replace_me:8080:8080
+      - 0.0.0.0:8080:8080
     volumes:
-      - ./keycloak:/tmp/keycloak
+      - .:/tmp/keycloak
     environment:
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=passKeycloakAdmin
@@ -14,7 +14,7 @@ services:
     container_name: db-person
     image: postgres:15.1-bullseye
     ports:
-      - replace_me:5434:5432
+      - 0.0.0.0:5434:5432
     environment:
       - POSTGRES_USER=person
       - POSTGRES_PASSWORD=passGeheim
@@ -23,7 +23,7 @@ services:
     container_name: db-auftrag
     image: postgres:15.1-bullseye
     ports:
-      - replace_me:5433:5432
+      - 0.0.0.0:5433:5432
     environment:
       - POSTGRES_USER=auftrag
       - POSTGRES_PASSWORD=passGeheim
